Added cmake test discovery
- update quickstart with discovery syntax
- explain test discovery functionality
- cross-link quickstarts
- explain cli options
- remove unused static file inclusion
- add contributing

--- a/docs/tutorials/quickstart.data/CMakeLists.txt
+++ b/docs/tutorials/quickstart.data/CMakeLists.txt
@@ -9,10 +9,10 @@ enable_testing()
 add_executable(main main.f90)
 set_target_properties(main PROPERTIES OUTPUT_NAME "main")
 target_link_libraries(main PRIVATE mylib)
-add_test(NAME docs/tutorials/quickstart:main COMMAND main)
+fortuno_discover_tests(main)
 
 add_executable(testapp testapp.f90)
 set_target_properties(testapp PROPERTIES OUTPUT_NAME "testapp")
 target_link_libraries(testapp PRIVATE mylib Fortuno::fortuno_serial)
-add_test(NAME docs/tutorials/quickstart:testapp COMMAND testapp)
+fortuno_discover_tests(testapp)
 set_tests_properties(docs/tutorials/quickstart:testapp PROPERTIES WILL_FAIL TRUE)
